@@ -1,3 +1,9 @@
+2011-09-28 Charles Suprin <hamaa1vs at gmail.com>
+
+   * src/gtk-sat-map.c
+   * src/gtk-sat-map-ground-track.c
+
+
 2011-10-01 Alexandru Csete <oz9aec at gmail.com>
 
    * src/gtk-sat-moduile-tmg.c:
